TMP/Storage/S3/KJDev/05-Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    wan-mode: 'public'
    lan-mode: 'private'
  annotations:
    cert-manager.io/cluster-issuer: kjdev-cluster
    external-dns.alpha.kubernetes.io/target: k0s-dc1.resolvemy.host.
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: 'true'
  name: s3-kjdev-ingress
spec:
  ingressClassName: traefik-core
  rules:
    - host: s3.mylogin.space
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: minio
                port:
                  number: 443

  tls:
    - hosts:
        - '*.mylogin.space'
      secretName: myloginspace-default-certificates
